Dashboard final card, and integrated the final game(Wheel)

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </main>
     </div>
     <script src="js/data.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/router.js"></script>
     <script src="js/module.js"></script>
     <script src="js/game-loader.js"></script>
+    <script src="js/app.js"></script> <!-- moved to last -->
 
     <!-- <script>
         console.log("APP_DATA:", window.APP_DATA);
