--- a/games/Capital-wheel/index.html
+++ b/games/Capital-wheel/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capital Wheel</title>
 
-    <link rel="icon" type="images/png" href = "assests/wheel.png">
-    <!-- My CSS -->
+    <link rel="icon" type="image/png" href="assests/wheel.png">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="Bubble_pop.css">
 
-    <!-- FontAwesome Icons -->
+    <!-- FontAwesome -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -22,41 +23,38 @@
 
 <div class="main-layout">
 
-    <!-- LEFT: PLAY BUTTON -->
-    <!-- LEFT: CONTROLS -->
+    <!-- LEFT CONTROLS -->
     <div class="controls">
 
-        <!-- Play / Pause Button -->
+        <!-- Play / Pause -->
         <button class="btn playpause">
             <i class="fa-solid fa-play"></i>
         </button>
 
-        <!-- Mode Switch
-        <button class="btn modeSwitch">
-            A / 1
-        </button> -->
-
-        <!-- Target displayyyyyyy -->
+        <!-- Target -->
         <div id="target-box">
             Find: <span id="target-value"></span>
         </div>
 
     </div>
 
-
-    <!-- CENTER: ROTATING WHEELlll -->
+    <!-- CENTER WHEEL -->
     <div class="rotating-wheel">
-        <div id="target-display"></div>
+
+        <!-- START SCREEN (emoji only, no rotation) -->
+        <div id="start-screen">
+            <div class="start-emoji">🙂</div>
+        </div>
+
         <div id="bubble-container"></div>
 
         <audio id="correctSound" src="assests/correct-83487.mp3"></audio>
         <audio id="wrongSound" src="assests/wrong-47985.mp3"></audio>
     </div>
 
-
-    <!-- RIGHT: HAMBURGER / OFFCANVAS -->
+    <!-- RIGHT MENU -->
     <div class="hamburger-wrapper">
-        <button class="hamburger-btn" 
+        <button class="hamburger-btn"
                 type="button"
                 data-bs-toggle="offcanvas"
                 data-bs-target="#menuOffcanvas">
@@ -79,18 +77,136 @@
         <button class="nav-btn">Quit</button>
         <button class="nav-btn">Reset</button>
 
+        <!-- SETTINGS -->
+        <button class="nav-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#settingsModal">
+            Settings
+        </button>
+
         <h6 class="mt-3 text-white">Speed</h6>
-        <!-- <button class="nav-btn modeColors">Colors Mode</button> -->
         <button class="nav-btn">0.5x</button>
         <button class="nav-btn">1x</button>
         <button class="nav-btn">1.25x</button>
         <button class="nav-btn">1.75x</button>
         <button class="nav-btn">2x</button>
+
     </div>
 </div>
 
-<!-- Bootstrap JS -->
+<!-- SETTINGS MODAL -->
+<!-- SETTINGS MODAL -->
+<div class="modal fade" id="settingsModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content bg-dark text-white">
+
+      <div class="modal-header">
+        <h5 class="modal-title">Capital Letters Settings</h5>
+        <button type="button" class="btn-close btn-close-white"
+                data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body">
+
+        <!-- LETTER SIZE -->
+        <div class="mb-3">
+          <label class="form-label d-flex justify-content-between">
+            Letter Size
+            <span id="letterSizeValue">1.8</span>
+          </label>
+          <input id="setting-letter-size"
+                 type="range"
+                 min="1"
+                 max="3"
+                 step="0.1"
+                 value="1.8"
+                 class="form-range">
+        </div>
+
+        <!-- BUBBLE SIZE (optional but useful clinically) -->
+        <div class="mb-3">
+          <label class="form-label d-flex justify-content-between">
+            Stimulus Size
+            <span id="bubbleSizeValue">90</span>
+          </label>
+          <input id="setting-bubble-size"
+                 type="range"
+                 min="60"
+                 max="140"
+                 step="5"
+                 value="90"
+                 class="form-range">
+        </div>
+
+        <!-- CONTRAST (future-ready) -->
+        <div class="mb-3">
+          <label class="form-label d-flex justify-content-between">
+            Contrast
+            <span id="contrastValue">100%</span>
+          </label>
+          <input id="setting-contrast"
+                 type="range"
+                 min="50"
+                 max="150"
+                 step="10"
+                 value="100"
+                 class="form-range">
+        </div>
+
+        <!-- PREVIEW -->
+        <div class="text-center mt-4">
+          <div class="preview-box">
+            <span id="preview-letter">A</span>
+          </div>
+          <small class="text-secondary">Live Preview</small>
+        </div>
+
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn btn-secondary"
+                data-bs-dismiss="modal">Close</button>
+        <button class="btn btn-primary" id="applySettings">
+          Apply
+        </button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+<!-- RESULT MODAL -->
+<div class="modal fade" id="resultModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark text-white">
+
+            <div class="modal-header">
+                <h5 class="modal-title">Session Results</h5>
+            </div>
+
+            <div class="modal-body">
+                <p>Total Bubbles: <span id="res-total"></span></p>
+                <p>Correct: <span id="res-correct"></span></p>
+                <p>Wrong: <span id="res-wrong"></span></p>
+                <p>Accuracy: <span id="res-accuracy"></span>%</p>
+                <p>Duration: <span id="res-time"></span> sec</p>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn btn-primary">Export CSV</button>
+                <button class="btn btn-secondary"
+                        data-bs-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- GAME LOGIC -->
 <script src="script.js"></script>
 
 </body>
