added numeric game and lowercase game wheels and fized the white bubble bug

--- a/games/Numeric-wheel/index.html
+++ b/games/Numeric-wheel/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uppercase Wheel</title>
+    <title>Numeric Wheel</title>
 
     <link rel="icon" type="image/png" href="assests/wheel.png">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="Bubble_pop.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- FontAwesome -->
     <link rel="stylesheet"
