--- a/games/Numeric-wheel/index.html
+++ b/games/Numeric-wheel/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numeric Wheel</title>
+    <title>Capital Wheel</title>
 
     <link rel="icon" type="image/png" href="assests/wheel.png">
 
@@ -54,7 +54,10 @@
 
     <!-- RIGHT MENU -->
     <div class="hamburger-wrapper">
-        <button class="hamburger-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuOffcanvas">
+        <button class="hamburger-btn"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#menuOffcanvas">
             <i class="fa-solid fa-bars"></i>
         </button>
     </div>
@@ -65,7 +68,8 @@
 <div class="offcanvas offcanvas-end" tabindex="-1" id="menuOffcanvas">
     <div class="offcanvas-header">
         <h5 class="offcanvas-title">Menu</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+        <button type="button" class="btn-close btn-close-white"
+                data-bs-dismiss="offcanvas"></button>
     </div>
 
     <div class="offcanvas-body">
@@ -74,7 +78,9 @@
         <button class="nav-btn">Reset</button>
 
         <!-- SETTINGS -->
-        <button class="nav-btn" data-bs-toggle="modal" data-bs-target="#settingsModal">
+        <button class="nav-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#settingsModal">
             Settings
         </button>
 
@@ -95,7 +101,8 @@
 
       <div class="modal-header">
         <h5 class="modal-title">Capital Letters Settings</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        <button type="button" class="btn-close btn-close-white"
+                data-bs-dismiss="modal"></button>
       </div>
 
       <div class="modal-body">
@@ -112,7 +119,13 @@
             Letter Size
             <span id="letterSizeValue">1.8</span>
           </label>
-          <input id="setting-letter-size" type="range" min="1" max="3" step="0.1" value="1.8" class="form-range">
+          <input id="setting-letter-size"
+                 type="range"
+                 min="1"
+                 max="3"
+                 step="0.1"
+                 value="1.8"
+                 class="form-range">
         </div>
 
         <!-- STIMULUS SIZE -->
@@ -121,7 +134,13 @@
             Stimulus Size
             <span id="bubbleSizeValue">90</span>
           </label>
-          <input id="setting-bubble-size" type="range" min="40" max="150" step="1" value="90" class="form-range">
+          <input id="setting-bubble-size"
+                 type="range"
+                 min="40"
+                 max="150"
+                 step="1"
+                 value="90"
+                 class="form-range">
         </div>
 
         <!-- BUBBLE COLORS -->
@@ -139,24 +158,43 @@
           <label class="form-label d-flex justify-content-between">
             Wheel Color
           </label>
-          <input id="setting-wheel-color" type="color" value="#0a1a3a" class="form-control form-control-color w-100">
+          <input id="setting-wheel-color"
+                 type="color"
+                 value="#0a1a3a"
+                 class="form-control form-control-color w-100">
         </div>
 
-        <!-- CONTRAST (future-ready) -->
+        <!-- NUMBER RANGE -->
         <div class="mb-3">
-          <label class="form-label d-flex justify-content-between">
-            Contrast
-            <span id="contrastValue">100%</span>
-          </label>
-          <input id="setting-contrast" type="range" min="50" max="150" step="10" value="100" class="form-range">
+          <label class="form-label text-white-50">Number Range</label>
+          <div class="d-flex gap-2">
+            <div class="flex-grow-1">
+              <small class="text-white-50">Min</small>
+              <input id="setting-min-num" type="number" value="0" class="form-control bg-dark text-white border-secondary">
+            </div>
+            <div class="flex-grow-1">
+              <small class="text-white-50">Max</small>
+              <input id="setting-max-num" type="number" value="9" class="form-control bg-dark text-white border-secondary">
+            </div>
+          </div>
         </div>
 
         <!-- PREVIEW -->
         <div class="text-center mt-4">
           <div class="preview-box">
-            <span id="preview-letter" style="font-size: 1.8rem; font-weight: 800; display: inline-block;">A</span>
+            <span id="preview-letter" style="font-size: 1.8em; font-weight: 800; display: inline-block;">1</span>
           </div>
           <small class="text-secondary">Live Preview</small>
+        </div>
+
+        <!-- DEVICE RECOMMENDATION NOTE -->
+        <div class="mt-4 p-2 rounded border border-secondary bg-black bg-opacity-25">
+          <small class="text-info d-block mb-1"><i class="fa-solid fa-circle-info me-1"></i> Recommended Sizes:</small>
+          <ul class="list-unstyled mb-0 small text-white-50" style="font-size: 0.75rem;">
+            <li>• Mobile: Bubble 50-60px | Text 1.2-1.4rem</li>
+            <li>• Tablet: Bubble 80-100px | Text 1.8-2.2rem</li>
+            <li>• TV/Large: Bubble 120-150px | Text 2.5-3.0rem</li>
+          </ul>
         </div>
         
         <!-- SESSION PARAMETERS (Live) -->
@@ -188,11 +226,12 @@
 
       </div>
 
-      <div class="modal-footer">
-        <button class="btn btn-secondary" data-bs-dismiss="modal" id="cancelSettings">Close</button>
-        <button class="btn btn-primary" id="applySettings">
-          Apply
-        </button>
+      <div class="modal-footer justify-content-between">
+        <button class="btn btn-outline-danger btn-sm" id="resetToDefault">Reset to Default</button>
+        <div class="d-flex gap-2">
+          <button class="btn btn-secondary" data-bs-dismiss="modal" id="cancelSettings">Close</button>
+          <button class="btn btn-primary" id="applySettings">Apply</button>
+        </div>
       </div>
 
     </div>
@@ -220,6 +259,7 @@
                 <div class="text-center mb-2">-------------------- Settings --------------------</div>
                 <div class="row mb-4">
                     <div class="col-6">
+                        <p class="mb-1">Number Range: <span id="res-range"></span></p>
                         <p class="mb-1">Number of Stimuli: <span id="res-stimuli-count"></span></p>
                         <p class="mb-1">Letter Size: <span id="res-letter-size-val"></span></p>
                     </div>
